--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     />
 
     <title>Bill Tracker</title>
+    <link rel="icon" href="src/images/logo.png" />
   </head>
   <body>
     <div id="root"></div>
